# four-pillars

./: .gitignore  Dockerfile  LICENSE  README.md  create-lib-structure  find_correct_ticker.py  gf_training.py  haap.csv  local_broker.py  local_chengsheng.py  local_data.py  local_feature_engineering.py  local_finance.py  local_gf_main.py  local_main.py  local_yijing.py  requirements.txt  setup.py  test.py  test.txt  test_alternative_data_sources.py  test_filtering_example.py  test_final_fix.py  test_fixes.py  test_hsi_ticker.py  test_training_dates.py  test_yfinance.py  test_yijing_api.py  verify_fixes.py
GFAnalytics/: README.md  requirements.txt  setup.py
GGTradingBot/: README.ME  backtest.py  broker_api.py  exit_strategies.py  historical_data.py  live_trade_main.py  main.py  position_keeping.py  quotation.py  report.py  requirements.txt  trading_actions.py  trading_system.py  yf_history_data.py
MT5/: Trailing4.0.mq5
app/: GF_lite_v2_0.ipynb  __init__.py  _calc.py  ai_helper.py  bazi.py  chengseng.py  config_loader.py  feature_engineering.py  finance.py  four_pillars.py  gcp_data.py  haap.py  logger.py  main.py  pillar_db_handler.py  pillar_db_handler.py.backup  refactor_bazi.py  setup.py  solarterm.py  yijing.py
bazi-app/: .gitignore  firebase.json  prod-test.MD  pyproject.toml  yijing.py
bazi-app/functions/: README.MD  __init__.py  main.py  mani.py.bk  requirements.txt  run_local.py  test_local.py  test_main.py
blank-app/: .firebaserc
docker/: Dockerfile
docs/: README.md
four-pillars-health-ai/: .env.example  README.md  requirements.txt
(+2051 files in other folders)
