[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bazi"
version = "1.3.1"
authors = [
  { name="Gary Lam" },
]
description = "A package for Bazi calculations"
requires-python = ">=3.8"
dependencies = [
    "db-dtypes",
    "ephem",
    "fastapi",
    "Flask",
    "functions-framework",
    "google-cloud-bigquery",
    "google-cloud-secret-manager",
    "ib_insync",
    "lunarcalendar",
    "numba",
    "numpy",
    "pandas",
    "python-dotenv",
    "pytz",
    "scikit-learn",
    "tqdm",
    "uvicorn",
    "yahooquery",
    "yfinance"
]

[project.urls]
Homepage = "https://github.com/gazaay/four-pillars" 